--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,10 @@
       "dest": "http://46.62.175.8/api/$1"
     },
     {
+      "src": "/Uploads/(.*)",
+      "dest": "http://46.62.175.8/Uploads/$1"
+    },
+    {
       "src": "/assets/(.*)",
       "dest": "/assets/$1",
       "headers": {
